fixed navmenu dark mode and added auto hide on scroll

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -282,6 +282,7 @@ nav {
     width: 188px;
     height: 208px;
     border-radius: 20px;
+    transition: 300ms ease;
 }
 
 .light-mode #navmenu-mobile {
@@ -292,7 +293,6 @@ nav {
 .dark-mode #navmenu-mobile {
     background-color: var(--darkCardRim);
     box-shadow: 0px 0px 10px #000000;
-    position: relative;
 }
 
 .dark-mode #navmenu-mobile::before {
@@ -320,6 +320,11 @@ nav {
     transition: 300ms ease;
 }
 
+.dark-mode #navmenu-mobile.hidden::before {
+    border-radius: 44px;
+}
+
+
 .navmenu-item {
     display: flex;
     position: relative;
@@ -336,10 +341,12 @@ nav {
 
 .light-mode .navmenu-item.selected {
     background-color: var(--lightSelected);
+    transition: 300ms ease;
 }
 
 .dark-mode .navmenu-item.selected {
     background-color: var(--darkSelected);
+    transition: 300ms ease;
 }
 
 .navmenu-item.hidden {
@@ -363,7 +370,6 @@ nav {
     background: none;
     transition: 300ms ease;
 }
-
 
 
 
